# amlx

./: .gitignore  README.md  amlx.rb  amlx.spec  pyproject.toml  run.sh
.github/scripts/: merge_bottle.py  update_formula.py
.github/workflows/: release.yml
Formula/: amlx.rb
examples/: train_toolcall_test.txt
src/amlx/: __init__.py  cli.py  config.py  model_type.py  models.py  scheduler.py  schemas.py  service.py
src/amlx/adapters/: __init__.py  base.py  echo.py  mlx_adapter.py
src/amlx/api/: __init__.py  app.py  context.py
src/amlx/api/routes/: __init__.py  cache_chat.py  datasets.py  models_catalog.py  models_ops.py  runtime.py  ui.py
src/amlx/cache/: __init__.py  blocks.py  disk.py  memory.py  prefix.py
src/amlx/inference/: __init__.py  complete.py  helpers.py  service.py
src/amlx/model_manager/: __init__.py  catalog_ops.py  compatibility.py  core.py  download_runner.py  enqueue.py  finetune_lookup.py  finetune_runner.py  finetune_save.py  manager.py  paths_meta.py  quantize_tasks.py  shared.py  system_ops.py
src/amlx/ui/: app.js  index.html  styles.css
src/amlx/ui/css/: 00-base.css  01-tabs-and-controls.css  02-chat.css  03-models.css  04-jobs.css  05-training-form.css  06-training-modal.css  07-animations-responsive.css  08-eval.css
src/amlx/ui/js/: 00-state.js  01-core.js  02-render-a.js  03-render-b.js  04-render-c.js  05-runtime-chat.js  06-train.js  07-actions.js  08-init-chat-train.js  09-init-model-runtime.js  10-init.js  11-eval.js
tests/: test_api.py  test_block_store.py  test_scheduler.py
